<resources>
    <string name="app_name">Safarer</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="Enter_your_Email">Enter your Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password!</string>
    <string name="NID_Number">Enter your National Id</string>
    <string name="todo">TODO</string>
</resources>
