<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_5">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="74dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="199dp"
        android:layout_marginBottom="491dp"
        android:contentDescription="@string/app_name"
        android:foregroundGravity="center"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="250dp"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="392dp"
        android:autofillHints=""
        android:background="#F5F3F3"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="340dp"
        android:background="#EDF5F3F3"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="214dp"
        android:elevation="10dp"
        app:cardBackgroundColor="#FCFBFB"
        app:cardCornerRadius="20dp"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/LoginButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="#EBF7F7F7"
                android:fontFamily="sans-serif"
                android:text="@string/login"
                android:textColor="#FC000000"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    />
    =======
    <Button
        android:id="@+id/forgetpassbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="111dp"
        android:text="Forgot Password?" />

    >>>>>>> Stashed changes
</RelativeLayout>
